# fincode-subscription-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  redocly.yaml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_users.py  0002_fincode_customer_card.py  0003_subscriptions.py  0004_webhook_events_seen.py  0005_subscription_nullable_card.py  0006_subscriptions_unpaid_unique.py  0007_users_google_sub.py  0008_drop_password_hash.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  cards.py  subscriptions.py  webhooks.py
backend/app/core/: config.py  db.py  enums.py  error_codes.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py  middleware.py  rate_limit.py  redaction.py  security.py
backend/app/models/: __init__.py  audit_log.py  fincode_card.py  fincode_customer.py  subscription.py  subscription_result.py  user.py  webhook_event_seen.py
backend/app/schemas/: auth.py  card.py  subscription.py
backend/app/services/: audit_logger.py  auth_service.py  base_manager.py  card_manager.py  customer_sync_service.py  google_identity.py  subscription_manager.py  subscription_periods.py  webhook_handler.py
backend/app/services/fincode/: base.py  card_service.py  circuit_breaker.py  client.py  customer_service.py  idempotency.py  mock_client.py  plan_service.py  subscription_service.py  webhook_handler.py
backend/tests/: conftest.py  test_auth.py  test_authorization.py  test_cards.py  test_customer_sync.py  test_error_contract.py  test_fincode_client.py  test_health.py  test_mock_mode.py  test_redaction.py  test_settings.py  test_subscription.py  test_subscription_unpaid.py  test_webhook_body_limit.py  test_webhook_cancellation.py  test_webhook_http.py  test_webhook_payment.py
docs/: README.md
docs/api/: README.md  openapi.yml
docs/architecture/: branching.md  commit-guidelines.md  data-model.md  error-handling.md  overview.md
docs/articles/: 2026-05-introducing-fincode-subscription-starter.md  README.md
docs/customization/: index.md  webhooks.md
docs/getting-started/: fincode-setup.md  local-development.md  quickstart.md  testing.md
docs/operations/: api-token-rotation.md  configuration.md  deployment.md  password-reset.md
docs/security/: 2026-05-vulnerability-audit.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Card.tsx  ConfirmDialog.tsx  ErrorBanner.tsx  FormField.tsx  Input.tsx  Label.tsx  Layout.tsx  LoadingButton.tsx  PageLoading.tsx  RequireAuth.tsx  Skeleton.tsx  SpecTable.tsx  StatusBadge.tsx  StatusDot.tsx
frontend/src/hooks/: useAuth.tsx  useSubscriptionDashboard.ts
frontend/src/hooks/useAuth/: AuthProvider.tsx  index.ts  types.ts  useAuth.ts
frontend/src/lib/: apiClient.ts  auth.ts  constants.ts  fincodeJs.ts  fincodeMode.ts  format.ts  googleIdentity.ts  styles.ts
frontend/src/pages/: AccountPage.tsx  CardsPage.tsx  HistoryPage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PlansPage.tsx  RegisterPage.tsx  SubscriptionPage.tsx
frontend/src/pages/__tests__/: CardsPage.test.tsx  HomePage.mock.test.tsx  HomePage.test.tsx  LoginPage.test.tsx
frontend/src/pages/home/: BillingHistorySection.tsx  CardSection.tsx  CardsSection.tsx  HistorySection.tsx  PlanSection.tsx  PlansSection.tsx  utils.ts  (+4 more)
frontend/src/test/: fixtures.ts  mockApi.ts  renderHomePage.tsx
frontend/src/types/: api.ts  ui.ts
