[project]
name = "fincode-subscription-backend"
version = "0.1.0"
description = "FastAPI backend for fincode subscription OSS"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "sqlalchemy[asyncio]>=2.0.30,<2.1.0",
    "asyncpg>=0.29.0,<0.31.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "alembic>=1.13.2,<2.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "pyjwt[crypto]>=2.9.0,<3.0.0",
    "pwdlib[argon2]>=0.2.0,<0.4.0",
    "slowapi>=0.1.9,<0.2.0",
    "httpx>=0.28.1,<0.29.0",
    "structlog>=24.1.0,<25.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "email-validator>=2.2.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=0.23.7,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.28.1,<0.29.0",
    "testcontainers[postgres]>=4.7.0,<5.0.0",
    "freezegun>=1.5.0,<2.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
